--- a/ui/src/app/components/user-profile/user-addresses/user-addresses.component.html
+++ b/ui/src/app/components/user-profile/user-addresses/user-addresses.component.html
@@ -36,7 +36,7 @@
       </li>
     </ul>
     <div class="button-group">
-      <button
+      <!-- <button
         class="btn btn-light btn-add"
         type="button"
         data-bs-toggle="modal"
@@ -44,10 +44,10 @@
       >
         <fa-icon [icon]="['fas', 'plus-square']"></fa-icon>
         Adicionar novo endereço
-      </button>
+      </button> -->
       <button class="btn btn-light btn-todo" (click)="changeMainAddress()">
         <fa-icon [icon]="['fas', 'pencil-alt']"></fa-icon>
-        Vinculo
+        Alterar endereço principal
       </button>
     </div>
   </div>
