--- a/ui/src/app/components/order-checkout/order-checkout.component.html
+++ b/ui/src/app/components/order-checkout/order-checkout.component.html
@@ -1,30 +1,14 @@
-<div class="checkout-container address-container" *ngIf="mainAdress">
-  <h1 class="mb-4 text-center">Endereço ativo:</h1>
-  <div class="address-row">
-    <div class="address-item"><strong>CEP:</strong> {{ mainAdress.cep }}</div>
-    <div class="address-item"><strong>UF:</strong> {{ mainAdress.uf }}</div>
-  </div>
-  <div class="address-row">
-    <div class="address-item">
-      <strong>Bairro:</strong> {{ mainAdress.bairro }}
-    </div>
-    <div class="address-item">
-      <strong>Complemento:</strong> {{ mainAdress.complemento }}
-    </div>
-  </div>
-  <div class="address-row">
-    <div class="address-item address-full">
-      <strong>Número:</strong> {{ mainAdress.numero }}
-      <span><strong>Apartamento:</strong> {{ mainAdress.apartamento }}</span>
-      <span
-        ><strong>Info Adicional:</strong> {{ mainAdress.infoAdicional }}</span
-      >
-    </div>
-  </div>
+<div class="address-container mt-4" *ngIf="user && user.addresses">
+  <h2 class="text-center">Confirme seu endereço:</h2>
+  <app-user-addresses
+    (addressToEdit)="addressEdit($event)"
+    (addressToDelete)="deleteAddress($event)"
+    [addresses]="user.addresses"
+  ></app-user-addresses>
 </div>
 
 <div class="checkout-container items-container text-center">
-  <h2>Checkout</h2>
+  <h2>Carrinho</h2>
   <div class="cart-details" *ngIf="cartItems$ | async as cartItems">
     <div *ngFor="let item of cartItems" class="cart-item">
       <img
@@ -37,6 +21,7 @@
           {{ item.product.name | slice : 0 : 20 }}
           {{ item.product.name.length > 20 ? "..." : "" }}
         </span>
+
         <div class="quantity-control">
           <button class="quantity-btn" (click)="decreaseQuantity(item)">
             <fa-icon [icon]="['fas', 'minus']"></fa-icon>
@@ -48,7 +33,9 @@
         </div>
       </div>
       <div class="product-actions">
-        <span class="product-price">${{ item.product.price }}</span>
+        <span class="product-price"
+          >${{ item.product.price * item.quantity }}</span
+        >
         <button class="delete-btn" (click)="deleteItem(item)">
           <fa-icon [icon]="['fas', 'trash']"></fa-icon>
         </button>
@@ -59,6 +46,8 @@
     <div class="total-price">Total Price: ${{ totalPrice }}</div>
   </ng-container>
   <div class="checkout-button-container">
-    <button class="checkout-button">Proceed to Payment</button>
+    <button class="checkout-button" (click)="confirmPurchase()">
+      Confirmar compra
+    </button>
   </div>
 </div>
