to-do: api: endpoint logout, annotations entities model client: pages add categorie, add product, add sub-categorie

--- a/ui/src/app/components/user-profile/profile/profile.component.html
+++ b/ui/src/app/components/user-profile/profile/profile.component.html
@@ -47,6 +47,7 @@
           <fa-icon [icon]="['fas', 'plus-square']"></fa-icon>
           Adicionar novo endereço
         </button>
+        <app-user-orders [Orders]="user.orders"></app-user-orders>
       </div>
     </div>
   </div>
