--- a/ui/src/app/components/admin-panel/admin-panel.component.html
+++ b/ui/src/app/components/admin-panel/admin-panel.component.html
@@ -39,12 +39,12 @@
         aria-controls="nav-products"
         aria-selected="false"
       >
-        Products
+        Produtos
       </button>
     </div>
   </nav>
-  <div class="tab-content" id="nav-tabContent">
-    <!-- Categories Content -->
+
+  <!-- <div class="tab-content" id="nav-tabContent">
     <div
       class="tab-pane fade show active"
       id="nav-categories"
@@ -52,11 +52,29 @@
       aria-labelledby="nav-categories-tab"
       tabindex="0"
     >
-      <!-- Sample list for categories -->
-      <app-list-categories></app-list-categories>
+      TESTE1
+    </div>
+    TESTE2
+  </div> -->
+
+  <div class="tab-content" id="nav-tabContent">
+    <div
+      class="tab-pane fade show active"
+      id="nav-categories"
+      role="tabpanel"
+      aria-labelledby="nav-categories-tab"
+      tabindex="0"
+    >
+      <mat-tab-group>
+        <mat-tab label="Lista de Categorias"
+          ><app-list-categories [categories]="categories"></app-list-categories>
+        </mat-tab>
+        <mat-tab label="Criar Categoria">
+          <app-add-category></app-add-category>
+        </mat-tab>
+      </mat-tab-group>
     </div>
 
-    <!-- Sub-Categories Content -->
     <div
       class="tab-pane fade"
       id="nav-subcategories"
@@ -64,10 +82,18 @@
       aria-labelledby="nav-subcategories-tab"
       tabindex="0"
     >
-      <app-list-subcategories></app-list-subcategories>
+      <mat-tab-group>
+        <mat-tab label="Lista de Sub-Categorias"
+          ><app-list-subcategories
+            [categories]="categories"
+          ></app-list-subcategories>
+        </mat-tab>
+        <mat-tab label="Criar Sub-Categoria">
+          <app-add-subcategory [categories]="categories"></app-add-subcategory>
+        </mat-tab>
+      </mat-tab-group>
     </div>
 
-    <!-- Products Content -->
     <div
       class="tab-pane fade"
       id="nav-products"
@@ -75,7 +101,7 @@
       aria-labelledby="nav-products-tab"
       tabindex="0"
     >
-      <app-list-products> </app-list-products>
+      <app-list-product></app-list-product>
     </div>
   </div>
 </div>
