--- a/ui/src/app/components/login/login.component.scss
+++ b/ui/src/app/components/login/login.component.scss
@@ -23,3 +23,11 @@
 input {
   background-color: #999;
 }
+
+select:focus,
+input:focus,
+.form-group:focus {
+  background-color: #999;
+  outline: none;
+  box-shadow: none;
+}
