fixing other things

--- a/ui/src/app/components/cart/cart-dropdown/cart-dropdown.component.html
+++ b/ui/src/app/components/cart/cart-dropdown/cart-dropdown.component.html
@@ -1,37 +1,41 @@
-<div class="rounded cart-container">
+<div class="cart rounded">
   <ng-container *ngIf="totalItems$ | async as totalItems">
-    <div class="header">
+    <div class="cart-header">
       <strong>Total Items: {{ totalItems }}</strong>
     </div>
 
-    <ng-container class="items-list" *ngIf="totalItems > 0">
-      <div *ngFor="let item of cartItems$ | async" class="cart-item">
+    <ng-container *ngIf="totalItems > 0" class="items">
+      <div *ngFor="let item of cartItems$ | async" class="item">
         <img
+          role="img"
+          title="{{ item.product.name }}"
           [src]="item.product.imageUrl"
           alt="{{ item.product.name }}"
-          class="product-image"
+          class="item-image"
         />
-        <span class="product-name">
+        <span class="item-name">
           {{
             (item.product.name | slice : 0 : 6) +
               (item.product.name.length > 6 ? "..." : "")
           }}
         </span>
-        <span class="product-quantity">x{{ item.quantity }}</span>
-        <span class="product-price">${{ item.product.price }}</span>
+        <span class="item-quantity">x{{ item.quantity }}</span>
+        <span class="item-price">${{ item.product.price }}</span>
       </div>
     </ng-container>
+
     <ng-container *ngIf="totalPrice$ | async as totalPrice">
-      <div class="total-price">Total Price: ${{ totalPrice }}</div>
+      <div class="total">Total Price: ${{ totalPrice }}</div>
     </ng-container>
 
-    <div class="checkout-button-container">
-      <button class="checkout-button" routerLink="order-checkout">
+    <div class="checkout">
+      <button class="checkout-btn" routerLink="order-checkout">
         Finalizar Compra
       </button>
     </div>
   </ng-container>
+
   <ng-container *ngIf="!(totalItems$ | async)">
-    <div class="no-items">Nenhum item no carrinho</div>
+    <div class="empty">Nenhum item no carrinho</div>
   </ng-container>
 </div>
