--- a/ui/src/app/components/login/login.component.scss
+++ b/ui/src/app/components/login/login.component.scss
@@ -1,13 +1,13 @@
 .login-container {
-  height: 100vh;
+  height: 80vh;
 }
 
 .login-form {
   border: solid white;
-  width: 300px; // Largura fixa para o formulário de login
+  width: 300px;
   padding: 20px;
   border-radius: 8px;
-  background: rgba(34, 34, 34, 0.8); // Fundo semi-transparente
+  background: rgba(34, 34, 34, 0.8);
 
   .form-control {
     border-radius: 0;
