--- a/ui/src/app/components/admin-panel/admin-panel.component.html
+++ b/ui/src/app/components/admin-panel/admin-panel.component.html
@@ -106,7 +106,7 @@
           ><app-list-product></app-list-product>
         </mat-tab>
         <mat-tab label="Criar Produto">
-          <app-add-product></app-add-product>
+          <app-add-product [categories]="categories"></app-add-product>
         </mat-tab>
       </mat-tab-group>
     </div>
