--- a/ui/src/app/components/admin-panel/admin-panel.component.html
+++ b/ui/src/app/components/admin-panel/admin-panel.component.html
@@ -44,19 +44,6 @@
     </div>
   </nav>
 
-  <!-- <div class="tab-content" id="nav-tabContent">
-    <div
-      class="tab-pane fade show active"
-      id="nav-categories"
-      role="tabpanel"
-      aria-labelledby="nav-categories-tab"
-      tabindex="0"
-    >
-      TESTE1
-    </div>
-    TESTE2
-  </div> -->
-
   <div class="tab-content" id="nav-tabContent">
     <div
       class="tab-pane fade show active"
@@ -103,7 +90,7 @@
     >
       <mat-tab-group>
         <mat-tab label="Lista de Produtos"
-          ><app-list-product></app-list-product>
+          ><app-list-products></app-list-products>
         </mat-tab>
         <mat-tab label="Criar Produto">
           <app-add-product [categories]="categories"></app-add-product>
