--- a/ui/src/app/components/admin-panel/products/list-products.component.html
+++ b/ui/src/app/components/admin-panel/products/list-products.component.html
@@ -1,1 +1,117 @@
-<p>list-products works!</p>
+<div *ngIf="products">
+  <div class="filters">
+    <mat-form-field appearance="fill">
+      <mat-label>PreçoMin</mat-label>
+      <input
+        matInput
+        type="number"
+        [(ngModel)]="queryParams.minprice"
+        min="0"
+      />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>PreçoMax</mat-label>
+      <input
+        matInput
+        type="number"
+        [(ngModel)]="queryParams.maxprice"
+        min="0"
+      />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Nome</mat-label>
+      <input
+        matInput
+        type="text"
+        placeholder="Nome"
+        [(ngModel)]="queryParams.name"
+      />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill">
+      <mat-label>Sub Categoria</mat-label>
+      <mat-select [(ngModel)]="queryParams.subCategoryName">
+        <mat-option [value]="">Limpar</mat-option>
+        <ng-container *ngFor="let category of categories">
+          <mat-option
+            *ngFor="let subCategory of category.subCategories"
+            [value]="subCategory.name"
+          >
+            {{ subCategory.name }}
+          </mat-option>
+        </ng-container>
+      </mat-select>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="onFilter()">
+      Filter
+    </button>
+  </div>
+
+  <mat-paginator
+    [length]="pagination?.totalItems"
+    [pageSize]="pagination?.itemsPerPage"
+    (page)="handlePage($event)"
+  >
+  </mat-paginator>
+  <table mat-table [dataSource]="products" class="dark-table text-center">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let product">
+        {{ product.id }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Nome</th>
+      <td mat-cell *matCellDef="let product">
+        {{ product.name | slice : 0 : 6 }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Descrição</th>
+      <td mat-cell *matCellDef="let product">
+        {{ product.description | slice : 0 : 6 }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="technicalInfo">
+      <th mat-header-cell *matHeaderCellDef>Informações Tecnicas</th>
+      <td mat-cell *matCellDef="let product">
+        {{ product.technicalInfo | slice : 0 : 6 }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="imageUrl">
+      <th mat-header-cell *matHeaderCellDef>Url da Imagem</th>
+      <td mat-cell *matCellDef="let product">{{ product.imageUrl }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Preço</th>
+      <td mat-cell *matCellDef="let product">{{ product.price }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef>Deletar</th>
+      <td mat-cell *matCellDef="let product">
+        <fa-icon
+          [icon]="['fas', 'trash-alt']"
+          (click)="deleteProduct(product.id)"
+        ></fa-icon>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+  <mat-paginator
+    [length]="pagination?.totalItems"
+    [pageSize]="pagination?.itemsPerPage"
+    (page)="handlePage($event)"
+  >
+  </mat-paginator>
+</div>
